updated qa notebook with parallel pre-ft code

--- a/examples/qa.ipynb
+++ b/examples/qa.ipynb
@@ -25,18 +25,20 @@
       "> initializing model parallel with size 1\n",
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n",
-      "Loaded in 34.17 seconds\n"
+      "Converting to LoRA\n",
+      "Loaded in 16.92 seconds\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "from llama import Workflow, Llama\n",
+    "from llama.util import find_free_port\n",
     "\n",
     "os.environ[\"RANK\"] = \"0\"\n",
     "os.environ[\"WORLD_SIZE\"] = \"1\"\n",
     "os.environ[\"MASTER_ADDR\"] = \"localhost\"\n",
-    "os.environ[\"MASTER_PORT\"] = \"29502\"\n",
+    "os.environ[\"MASTER_PORT\"] = str(find_free_port())\n",
     "\n",
     "workflow = Workflow.build(\n",
     "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
@@ -45,6 +47,10 @@
     "    max_batch_size=8,\n",
     "    model_parallel_size=1,\n",
     "    max_nodes=100,\n",
+    "    use_lora=True,\n",
+    "    lora_rank=32,\n",
+    "    lora_alpha=64,\n",
+    "    lora_dropout=0.05,\n",
     ")\n",
     "\n",
     "llama = Llama(workflow.model, workflow.tokenizer)"
@@ -57,132 +63,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-train.json') as f:\n",
-    "    data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "819446c2-c55b-47fe-862b-8bfbca3bda25",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "###\n",
-      "Who was President when the first Peanuts cartoon was published?\n",
-      "Harry Truman\n",
-      "###\n",
-      "Which American-born Sinclair won the Nobel Prize for Literature in 1930?\n",
-      "Sinclair Lewis\n",
-      "###\n",
-      "Where in England was Dame Judi Dench born?\n",
-      "York\n",
-      "###\n",
-      "William Christensen of Madison, New Jersey, has claimed to have the world's biggest collection of what?\n",
-      "Beer Cans\n",
-      "###\n",
-      "In which decade did Billboard magazine first publish and American hit chart?\n",
-      "30s\n",
-      "###\n",
-      "Where was horse racing's Breeders' Cup held in 1988?\n",
-      "Churchill Downs, Louisville, Kentucky\n",
-      "###\n",
-      "From which country did Angola achieve independence in 1975?\n",
-      "Portugal\n",
-      "###\n",
-      "Which city does David Soul come from?\n",
-      "Chicago\n",
-      "###\n",
-      "Who won Super Bowl XX?\n",
-      "Chicago Bears\n",
-      "###\n",
-      "Which was the first European country to abolish capital punishment?\n",
-      "Norway\n"
-     ]
-    }
-   ],
-   "source": [
-    "problems = data['Data']\n",
+    "# import json\n",
     "\n",
-    "for i, problem in enumerate(problems):\n",
-    "    if i == 10:\n",
-    "        break\n",
-    "    print('###')\n",
-    "    print(problem['Question'])\n",
-    "    print(problem['Answer']['Value'])"
+    "# with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-train.json') as f:\n",
+    "#     data = json.load(f)\n",
+    "#     problems = data['Data']\n",
+    "#     problems = problems[:len(problems)]\n",
+    "\n",
+    "# with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-dev.json') as f:\n",
+    "#     data = json.load(f)\n",
+    "#     problems = data['Data']\n",
+    "#     problems = problems[:len(problems)//2] # hold out half"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c996dfb8-6e5e-46d0-83d4-e5dd97a9efe0",
+   "metadata": {},
+   "source": [
+    "## accuracy prior to fine-tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "80ffedbf-924d-4b04-a118-fbf4d35961d7",
+   "execution_count": null,
+   "id": "c1569b56-4ddf-460d-bf61-eb97d7859b7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from operator import itemgetter as get\n",
+    "import json\n",
+    "import random\n",
+    "from collections import defaultdict\n",
+    "from tqdm import tqdm\n",
+    "from llama.workflows.qa import ask_parallel, eval_system_prompt, format_eval_user, parse_items\n",
     "\n",
-    "def ask_sequential(workflow, subset):\n",
-    "    workflow.reset()\n",
-    "    \n",
-    "    [prompt] = workflow.insert([\n",
-    "        {\n",
-    "            'messages': (\n",
-    "                [{'role': 'system', 'content': 'Answer ALL of the user\\'s questions. Answer with an numbered list. Do not include extraneous text.'}] +\n",
-    "                [{'role': 'user', 'content': f'Question {i+1}: {p['Question']}'} for i, p in enumerate(subset)]\n",
-    "            ),\n",
-    "            'parent_ids': []\n",
-    "        }\n",
-    "    ])\n",
-    "    \n",
-    "    [response] = get('tokens')(workflow.step(\n",
-    "        tasks=[{\n",
-    "            'header': ('assistant', None),\n",
-    "            'prefill': '',\n",
-    "            'parent_ids': [prompt['id']],\n",
-    "        }]\n",
-    "    ))\n",
-    "    \n",
-    "    return workflow.tokenizer.decode(response)\n",
+    "workflow.model.eval()\n",
     "\n",
-    "def ask_parallel(workflow, subset, annotate=False, compact=False):\n",
-    "    workflow.reset()\n",
+    "with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-dev.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    problems = data['Data']\n",
     "    \n",
-    "    [prompt] = workflow.insert([\n",
-    "        {\n",
-    "            'messages': [{'role': 'system', 'content': 'Answer ALL of the user\\'s questions. Answer with an numbered list. Do not include extraneous text.'}],\n",
-    "            'parent_ids': []\n",
-    "        }\n",
-    "    ])\n",
+    "for num_questions in [16]:\n",
+    "    answers = []\n",
+    "    for seed in tqdm(range(50), desc='Generating'):\n",
+    "        workflow.reset()\n",
+    "        random.seed(seed)\n",
+    "        subset = random.sample(problems, k=num_questions)\n",
+    "        answer = ask_parallel(workflow, subset, annotate=True)\n",
+    "        answers.append((subset, workflow.tokenizer.decode(answer['output_tokens'])))\n",
     "\n",
-    "    questions = workflow.insert([\n",
-    "        {\n",
-    "            'messages': [{'role': 'user', 'content': f'{f'Question {i+1}: ' if annotate else ''}{p['Question']}'}],\n",
-    "            'parent_ids': [prompt['id']],\n",
-    "        }\n",
-    "        for i, p in enumerate(subset)\n",
-    "    ])\n",
-    "    \n",
-    "    [response] = get('tokens')(workflow.step(\n",
-    "        tasks=[{\n",
-    "            'header': ('assistant', None),\n",
-    "            'prefill': '',\n",
-    "            'parent_ids': [prompt['id']] + [q['id'] for q in questions],\n",
-    "        }],\n",
-    "        compact=compact\n",
-    "    ))\n",
-    "    \n",
-    "    return workflow.tokenizer.decode(response)\n",
+    "    workflow.model.reshape_cache(num_questions)\n",
+    "    workflow.model.set_adapter_state(enabled=False)\n",
+    "    correct = defaultdict(int)\n",
+    "    for subset, answer in tqdm(answers, desc='Evaluating'):\n",
+    "        individual_answers = parse_items(answer)\n",
+    "        resps = llama.chat_completion([\n",
+    "            [{'role': 'system', 'content': eval_system_prompt},\n",
+    "            {'role': 'user', 'content': format_eval_user(s, a)}]\n",
+    "            for s, a in zip(subset, individual_answers)\n",
+    "        ], content_prefills=['{\"correct\": \"'] * min(num_questions, len(individual_answers)))\n",
     "\n",
-    "def parse_items(text):\n",
-    "    lines = [line.strip() for line in text.split('\\n') if line.strip()]\n",
-    "    items = [line.split('. ', 1)[1] if '. ' in line else line for line in lines]\n",
-    "    return items"
+    "        for i, r in enumerate(resps):\n",
+    "            if 'true' in r['generation']['content'].lower():\n",
+    "                correct[i] += 1\n",
+    "\n",
+    "    print(sorted(list(correct.items())))"
    ]
   },
   {
@@ -195,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "cea0e884-4cc3-4dba-bdf6-b3bb39b55902",
    "metadata": {},
    "outputs": [
@@ -203,16 +148,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:23<00:00,  1.28it/s]\n"
+      "100%|██████████| 30/30 [00:44<00:00,  1.50s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11292"
+       "13163"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +166,9 @@
     "import random\n",
     "from tqdm import tqdm\n",
     "from pathlib import Path\n",
+    "from llama.workflows.qa import ask_sequential\n",
+    "\n",
+    "workflow.model.set_adapter_state(enabled=False)\n",
     "\n",
     "output = []\n",
     "for seed in tqdm(range(30)):\n",
@@ -228,6 +176,7 @@
     "    output.append(f\"\\n## Trial {seed}\\n\")\n",
     "    subset = random.sample(problems, k=2)\n",
     "    answer = ask_sequential(workflow, subset)\n",
+    "    answer = workflow.tokenizer.decode(answer['output_tokens'])\n",
     "\n",
     "    for i, (s, answer) in enumerate(zip(subset, parse_items(answer))):\n",
     "        output.extend([\n",
@@ -239,7 +188,7 @@
     "        if i < len(subset) - 1:\n",
     "            output.append(\"\\n---\\n\")\n",
     "\n",
-    "Path('/home/tbai4/llama3/dumps/sequential_n2.md').write_text('\\n'.join(output))"
+    "Path('/home/tbai4/llama3/dumps/sequential_dev_n2.md').write_text('\\n'.join(output))"
    ]
   },
   {
