--- a/examples/finetune_tot.ipynb
+++ b/examples/finetune_tot.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99171e6f-6165-4597-89c2-20c906602ef4",
    "metadata": {},
    "outputs": [
@@ -48,20 +48,8 @@
      "text": [
       "> initializing model parallel with size 1\n",
       "> initializing ddp with size 1\n",
-      "> initializing pipeline with size 1\n",
-      "Converting to LoRA\n",
-      "Loaded in 18.11 seconds\n"
+      "> initializing pipeline with size 1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.08480376642881861"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -132,7 +120,11 @@
     "     'prefill': f'Solution #{i+1}:\\n\\n',\n",
     "     'parent_ids': [cot['id']]}\n",
     "    for i in range(8)\n",
-s
+    "]\n",
+    "target_proposal_ids = [p + [workflow.tokenizer.eot_id] for p in sample['result']['proposal_tokens']]\n",
+    "proposal_nodes, proposal_logprobs = workflow.train_step(proposal_tasks, target_proposal_ids)"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 15,
@@ -278,13 +270,15 @@ s
     "from llama.workflows.finetune import finetune\n",
     "\n",
     "finetune(\n",
-    "    data_path='tot_data',\n",
+    "    data_path='/home/tbai4/llama3/llama/tot_data_2',\n",
     "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
     "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
-    "    output_dir='/scratch4/jeisner1/tjbai/checkpoints',\n",
+    "    output_dir='/scratch4/jeisner1/tjbai/checkpoints/tot_2',\n",
     "    gradient_accumulation_steps=4,\n",
     "    learning_rate=2e-4,\n",
     "    max_seq_len=6144,\n",
+    "    checkpoint_freq=100,\n",
+    "    validation_freq=100,\n",
     ")"
    ]
   },
@@ -752,10 +746,84 @@ s
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5cbb9c4e-dda0-4c48-8bf4-4ebfded6e964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> initializing model parallel with size 1\n",
+      "> initializing ddp with size 1\n",
+      "> initializing pipeline with size 1\n",
+      "Loaded in 14.83 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 280/280 [00:59<00:00,  4.71it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 280/280 [01:00<00:00,  4.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 280/280 [01:00<00:00,  4.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 280/280 [00:53<00:00,  5.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -771,7 +839,7 @@ s
     "llama = Llama.build(\n",
     "    ckpt_dir='/scratch4/jeisner1/tjbai/llama_8b',\n",
     "    tokenizer_path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model',\n",
-    "    max_seq_len=1024,\n",
+    "    max_seq_len=4096,\n",
     "    max_batch_size=3,\n",
     "    model_parallel_size=1,\n",
     ")\n",
@@ -791,14 +859,25 @@ s
     "\n",
     "problems = load_math_problems('/home/tbai4/llama3/data/MATH', split='val')\n",
     "\n",
-    "for id in [-1, 0, 99, 199, 299, 399]:\n",
-    "    if id == -1:\n",
-    "        with open(f'/home/tbai4/llama3/baseline_e2e.json') as f:\n",
-    "            data = json.load(f)\n",
-    "    else:\n",
-    "        with open(f'/home/tbai4/llama3/checkpoint-{id}_e2e.json', 'r') as f:\n",
-    "            data = json.load(f)\n",
-    "        \n",
+    "all = []\n",
+    "\n",
+    "for path in [\n",
+    "    '/home/tbai4/llama3/dumps/tot_2/hotswap-epoch-0_step-195.json',\n",
+    "    '/home/tbai4/llama3/dumps/tot_2/hotswap-epoch-0_step-395.json',\n",
+    "    '/home/tbai4/llama3/dumps/tot_2/hotswap-epoch-0_step-595.json',\n",
+    "    '/home/tbai4/llama3/dumps/tot_2/hotswap-epoch-0_step-795.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-0_step-195.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-0_step-395.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-0_step-595.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-1_step-95.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-1_step-495.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/tot_2/lora_epoch-1_step-895.pt_e2e.json',\n",
+    "    # '/home/tbai4/llama3/dumps/baseline_e2e.json',\n",
+    "]:\n",
+    "    with open(path) as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    correct = []\n",
     "    for d, problem_obj in tqdm(zip(data, problems), total=280):\n",
     "        problem = problem_obj['problem']\n",
     "        solution = problem_obj['solution']\n",
@@ -822,7 +901,7 @@ s
     "        outputs = llama.chat_completion(\n",
     "            [dialog for _ in range(3)],\n",
     "            max_gen_len=256,\n",
-    "            temperature=0.7,\n",
+    "            temperature=0.25,\n",
     "            top_p=0.9,\n",
     "            seed=42,\n",
     "        )\n",
@@ -830,17 +909,83 @@ s
     "        inc = 0\n",
     "        cor = 0\n",
     "        for o in outputs:\n",
-    "            if o['generation']['content'] == 'incorrect':\n",
+    "            if 'incorrect' in o['generation']['content'].lower():\n",
     "                inc += 1\n",
-    "            elif o['generation']['content'] == 'correct':\n",
+    "            elif 'correct' in o['generation']['content'].lower():\n",
     "                cor += 1\n",
     "            else:\n",
+    "                print(o['generation']['content'])\n",
     "                raise Exception()\n",
     "\n",
-    "        correct += cor > inc\n",
+    "        correct.append(cor > inc)\n",
     "        \n",
-    "    print(correct)"
+    "    print(sum(correct))\n",
+    "    all.append(correct)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "adfc1f83-766f-4e95-95b3-8fd2de3e316b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contingency Table:\n",
+      "Both correct: 70\n",
+      "Baseline correct only: 44\n",
+      "Fine-tuned correct only: 36\n",
+      "Both incorrect: 130\n",
+      "\n",
+      "p-value: 0.43404225534547874\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('tmp') as f:\n",
+    "    all = json.load(f)\n",
+    "    \n",
+    "import numpy as np\n",
+    "from statsmodels.stats.contingency_tables import mcnemar\n",
+    "\n",
+    "def run_mcnemars_test(clf1_results, clf2_results):\n",
+    "    clf1_results = np.array(clf1_results)\n",
+    "    clf2_results = np.array(clf2_results)\n",
+    "    \n",
+    "    both_correct = np.sum((clf1_results == True) & (clf2_results == True))\n",
+    "    both_incorrect = np.sum((clf1_results == False) & (clf2_results == False))\n",
+    "    clf1_only = np.sum((clf1_results == True) & (clf2_results == False))\n",
+    "    clf2_only = np.sum((clf1_results == False) & (clf2_results == True))\n",
+    "    \n",
+    "    table = [[both_correct, clf1_only],\n",
+    "             [clf2_only, both_incorrect]]\n",
+    "    \n",
+    "    print(f\"Contingency Table:\")\n",
+    "    print(f\"Both correct: {both_correct}\")\n",
+    "    print(f\"Baseline correct only: {clf1_only}\")\n",
+    "    print(f\"Fine-tuned correct only: {clf2_only}\")\n",
+    "    print(f\"Both incorrect: {both_incorrect}\")\n",
+    "    \n",
+    "    # Run test\n",
+    "    result = mcnemar(table, exact=True)  # exact=True for small samples\n",
+    "    \n",
+    "    return result.pvalue\n",
+    "\n",
+    "p_value = run_mcnemars_test(all[1], all[0])\n",
+    "print(f\"\\np-value: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa345bf-0ca0-40fb-a759-0a12243a4030",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
