--- a/examples/qa.ipynb
+++ b/examples/qa.ipynb
@@ -14,6 +14,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "6212e6cd-855b-4cd3-b8e4-4318839a076b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('/home/tbai4/llama3/dumps/triviaqa/eval.json') as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "6e22b1fc-910a-41b0-9d4a-3db0d1b606e6",
    "metadata": {},
@@ -26,7 +39,7 @@
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n",
       "Converting to LoRA\n",
-      "Loaded in 16.92 seconds\n"
+      "Loaded in 24.88 seconds\n"
      ]
     }
    ],
@@ -58,22 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7dc5b083-f642-46e7-a313-0de122cb94dd",
+   "execution_count": 13,
+   "id": "f33ce67a-3b8d-414f-a559-128df532fe9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jupiter']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import json\n",
-    "\n",
-    "# with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-train.json') as f:\n",
-    "#     data = json.load(f)\n",
-    "#     problems = data['Data']\n",
-    "#     problems = problems[:len(problems)]\n",
-    "\n",
-    "# with open('/home/tbai4/llama3/data/triviaqa/unfiltered-web-dev.json') as f:\n",
-    "#     data = json.load(f)\n",
-    "#     problems = data['Data']\n",
-    "#     problems = problems[:len(problems)//2] # hold out half"
+    "parse_items(answers['choreographed'][0][1])"
    ]
   },
   {
@@ -86,10 +100,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c1569b56-4ddf-460d-bf61-eb97d7859b7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating: 100%|██████████| 50/50 [23:53<00:00, 28.67s/it]\n",
+      "Evaluating: 100%|██████████| 50/50 [12:25<00:00, 14.92s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 1)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import random\n",
@@ -103,7 +140,7 @@
     "    data = json.load(f)\n",
     "    problems = data['Data']\n",
     "    \n",
-    "for num_questions in [16]:\n",
+    "for num_questions in [16]:www\n",
     "    answers = []\n",
     "    for seed in tqdm(range(50), desc='Generating'):\n",
     "        workflow.reset()\n",
